// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input.Search should support custom Button 1`] = `
<span
  class="jc-input-search jc-input-search-enter-button jc-input-affix-wrapper"
>
  <input
    class="jc-input"
    type="text"
  />
  <span
    class="jc-input-suffix"
  >
     
    <button
      class="jc-btn jc-input-search-button"
      type="button"
    >
      <span>
        ok
      </span>
    </button>
     
  </span>
</span>
`;

exports[`Input.Search should support custom button 1`] = `
<span
  class="jc-input-search jc-input-search-enter-button jc-input-affix-wrapper"
>
  <input
    class="jc-input"
    type="text"
  />
  <span
    class="jc-input-suffix"
  >
     
    <button>
      ok
    </button>
     
  </span>
</span>
`;
